force-app/main/default/objects/RevView_Error_Log__c/RevView_Error_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to hold the error log while mass calculating the opportunities from batch.</description>
    <label>RevView Error Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>RevView Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RevView Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>