force-app/main/default/objects/RevView_Error_Log__c/fields/Error_Log_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_Message__c</fullName>
    <label>Error Log Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>