force-app/main/default/objects/RevView_Error_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to hold the opportunity which failed during the mass calculation.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RevView Error Log</relationshipLabel>
    <relationshipName>RevView_Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>