force-app/main/default/objects/RevView_Error_Log__c/fields/Set_Message__c.field-meta.xml
<CustomField>
    <fullName>Set_Message__c</fullName>
    <label>Set Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>