force-app/main/default/objects/RevView_Error_Log__c/fields/Type_Of_Exception__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Exception__c</fullName>
    <label>Type Of Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>